# FortiPy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.py
API/api/: global_values.py
API/api/system/: global.json  global.py
env/: dev.env
examples/: HA01_7-4_2702_202506241025.conf  gateway_7-4_2573_202507012301.conf
python/fortinet-wrapper/: config.py  main.py
python/fortinet_wrapper/: config.py  main.py
src/fortinet_wrapper/: fortios.py  main.py
