[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fortinet_wrapper"
version = "0.1.0"
description = "fortinet_wrapper: Fortinet Wrapper** is a Python wrapper for the FortiOS API."
readme = "README.md"
authors = [
  { name="HBNet Networks", email="jaco@hbnet.tech" }
]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/HNBetNetworks/fortinet-wrapper"
Repository = "https://github.com/HNBetNetworks/fortinet-wrapper"
Issues = "https://github.com/HNBetNetworks/fortinet-wrapper/issues"

[tool.setuptools]
packages = ["fortinet_wrapper"]

[tool.setuptools.package-data]
fortiner_wrapper = ["py.typed"]

[tool.setuptools.exclude-package-data]
fortiner_wrapper = ["*.conf", "*.bak"]
